--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300&display=swap"
 			rel="stylesheet"
 		/>
-		<title>My Portfolio</title>
+		<title>My Web Developer Portfoilio</title>
 	</head>
 	<body>
 		<div id="root"></div>
