--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
+		<link rel="icon" type="image/png" href="public/favicon.ico" type="image/vnd.microsoft.icon" />
+		<link rel="icon" href="public/favicon-16x16.png" type="image/png" sizes="16x16" />
+		<link rel="icon" href="public/favicon-32x32.png" type="image/png" sizes="32x32" />
+		<link rel="apple-touch-icon" href="public/apple-touch-icon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
