--- a/index.html
+++ b/index.html
@@ -17,6 +17,49 @@
 			rel="stylesheet"
 		/>
 		<title>My Web Developer Portfolio</title>
+
+		<style>
+			:root {
+				--bg-color-dark: #141e27;
+				--bg-color-light: #f5f5f5;
+				--frame-color-dark: #121b23;
+				--frame-color-light: #e5e5e5;
+			}
+
+			@media (prefers-color-scheme: light) {
+				:root {
+					--bg-color: var(--bg-color-light);
+					--frame-color: var(--frame-color-light);
+				}
+			}
+
+			@media (prefers-color-scheme: dark) {
+				:root {
+					--bg-color: var(--bg-color-dark);
+					--frame-color: var(--frame-color-dark);
+				}
+			}
+
+			body {
+				margin: 0;
+				background-color: var(--bg-color);
+			}
+
+			html {
+				background-color: var(--frame-color);
+			}
+
+			#root {
+				opacity: 0;
+				animation: fadeIn 0.15s ease-in forwards;
+			}
+
+			@keyframes fadeIn {
+				to {
+					opacity: 1;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<div id="root"></div>
